# Qt6CMake

./: CMakeLists.txt  README.md
forms/: mainwindow.ui
src/: main.cpp
